name:                sym
version:             0.1
synopsis:            A toy symbolic algebra library.
homepage:            http://github.com/lightquake/sym
license:             MIT
license-file:        LICENSE
author:              Kata
maintainer:          lightquake@amateurtopologist.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Parser.AST, Parser.RPN, Evaluate
  build-depends:       base >=4.6 && <4.7,
                       lens,
                       parsec >= 3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base,
                       hspec,
                       lens,
                       parsec >= 3
  default-language:    Haskell2010
  hs-source-dirs:      src, test

executable repl
  main-is:             REPL.hs
  default-language:    Haskell2010
  build-depends:       base,
                       parsec >= 3,
                       pipes >= 4,
                       sym
